W.html file updated

--- a/t/w.html
+++ b/t/w.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>asdf</h3>
     <h1>sdfghj</h1>
-    <h2></h2>
+    <img src="" alt="">
 </body>
 </html>
